Ensure that sr bar hoverstate does not overlap with userbar

--- a/style/modules/header/_sr-bar.scss
+++ b/style/modules/header/_sr-bar.scss
@@ -10,10 +10,10 @@
   position: relative;
   top: -30px;
   z-index: 20;
-  height: em(30, 10);
+  height: 30px;
   border: 0;
   font-size: 10px;
-  line-height: em(30, 10);
+  line-height: 30px;
   overflow: visible !important; // for RES subreddit manager users
 
   // triangle icon
@@ -33,25 +33,19 @@
 
     &::after {
       opacity: 0;
-      height: 0;
+      height: 10px;
     }
-  }
-
-  // positions text
-  .sr-list {
-    // margin: 0;
-    // padding: 0;
   }
 
   // "my subreddits" menu button
   .dropdown.srdrop {
-    height: em(30, 10);
+    height: 30px;
     padding: 0;
     cursor: pointer;
 
     .selected {
       // replace "my subreddits" with burger
-      margin: em(14, 10) em(10, 10) em(10, 10);
+      margin: 14px 10px 10px;
       padding: 0;
       text-indent: -999em;
     }
@@ -60,14 +54,14 @@
   .drop-choices.srdrop {
     overflow-y: scroll;
 
-    &.inuse { margin-left: em(10, 10); }
+    &.inuse { margin-left: 10px; }
   }
 
   .dropdown.srdrop {
     .selected {
       // replace "my subreddits" with burger
       background: none;
-      @include burger(em(20, 10), em(2, 10), em(4, 10), 0, $dark-hint-text);
+      @include burger(20px, 2px, 4px, 0, $dark-hint-text);
     }
 
     // change burger color on mouseover
